[package]
name = "rsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
insta = "1.30.0"
rsb_derive = "0.5.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
ts-rs = { version = "7.0.0" }
